@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-2298] added constant to defines to be able configure default Y axis position: left or right (AM)
  - [ZBX-2174] fixed a small memory leak in SNMP checks (asaveljevs)
  - [ZBX-2300] fixed caching of "Database monitor" items. Thanks to Kirill Fateev (Sasha)
  - [ZBX-2290] fixed screen cells moving (Vedmak)
